Updated resume content, fixed spelling error.

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,26 +1,26 @@
 \cvsection{\huge{Employment}}
-\begin{cventries}
-  \cventry
-    {\normalsize \textbf{Software Engineer Intern}}
-    {\large Amazon.com}
-    {\normalsize \textbf{Austin, TX}}
-    {\normalsize \textbf{May 2017 to Aug 2017}}
-    {
-      \begin{cvitems}
-        \item {\normalsize TBD}
-      \end{cvitems}
-    }
-  \cventry
-    {\normalsize \textbf{Post Silicon Validation Intern}}
-    {\large Intel Corporation}
-    {\normalsize \textbf{Austin, TX}}
-    {\normalsize \textbf{Oct 2016 to Apr 2017}}
-    {
-      \begin{cvitems}
-        \item {\normalsize Migrated chip validation testing to a C# platform with greater access to hardware interfacing} 
-        \item {\normalsize Added features to a validation codebase made by a graduate intern}
-        \item {\normalsize Created a graphical user interface in Kivy for selection and loading of test programs for chip validation}
-        \item {\normalsize Developed Python scripts to automate manual testing procedures, significantly reducing time costs for \\validation teams}
-      \end{cvitems}
-    }
-\end{cventries}
+  \begin{cventries}
+    \cventry
+      {\normalsize \textbf{Software Engineer Intern}}
+      {\large Amazon.com}
+      {\normalsize \textbf{Austin, TX}}
+      {\normalsize \textbf{May 2017 to Aug 2017}}
+      {
+        \begin{cvitems}
+          \item {\normalsize TBD - Exports and Expansion Team}
+        \end{cvitems}
+      }
+    \cventry
+      {\normalsize \textbf{Post Silicon Validation Intern}}
+      {\large Intel Corporation}
+      {\normalsize \textbf{Austin, TX}}
+      {\normalsize \textbf{Oct 2016 to Apr 2017}}
+      {
+        \begin{cvitems}
+          \item {\normalsize Migrated chip validation testing to a C\# platform with greater access to hardware interfacing} 
+          \item {\normalsize Added processor logging features for a validation program made by a graduate intern}
+          \item {\normalsize Created a graphical user interface in Kivy for selection and loading of test programs for chip validation}
+          \item {\normalsize Developed Python scripts to automate manual testing procedures, reducing time costs for validation teams}
+        \end{cvitems}
+      }
+  \end{cventries}
