--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -19,7 +19,7 @@
     {
       \begin{cvitems}
         \item {\normalsize With a partner, developed a chat client in Java with socket programming using observer design pattern}
-        \item {\normalsize User could communicate with other users from different machines, privately messgae users, send emojis, login with a unique username, logout from the server, and see who is online real-time with the UI written in JavaFX}
+        \item {\normalsize User could communicate with other users from different machines, privately message users, send emojis, login with a unique username, logout from the server, and see who is online real-time with the UI written in JavaFX}
       \end{cvitems}
     }
   \cventry
@@ -30,18 +30,18 @@
     {
       \begin{cvitems}
         \item {\normalsize With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
-        \item {\normalsize Implemented finite state machine for the player to change rooms, concurrent background music, and used double buffering to improve rendering quality}
+        \item {\normalsize Implemented finite state machine for the player to change rooms, background music, and used double buffering to improve rendering quality}
       \end{cvitems}
     }
   \cventry
     {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE312/tree/master/Project6}}}
-    {\large Blip Language and Parser}
+    {\large Language Parser}
     {}
     {}
     {
       \begin{cvitems}
-        \item {\normalsize Created programming language in C++ that parsed input from text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
-        \item {\normalsize Utilized polish notation in the form of expression trees to handle integer computation}
+        \item {\normalsize Created C++ program which parsed input from a text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
+        \item {\normalsize Handled integer computation statements in polish notation with expression trees}
       \end{cvitems}
     }
 \end{cventries}
