--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -8,7 +8,7 @@
 		{
 			\begin{cvitems}
 				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security}
-                \item {\normalsize Learn to use PHP, SQL, and a variety of security tools in the Kali linux distrobution through Docker containers} 
+                \item {\normalsize Learn to use PHP, SQL, and a variety of security tools in the Kali linux distribution through Docker containers} 
 			\end{cvitems}
 		}
 \end{cventries}
