--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,9 +1,9 @@
 \cvsection{\huge{Skills}}
 \begin{cvskills}
-	\cvskill{\normalsize Languages}{\normalsize Java, C, Python, PHP, SQL}
+	\cvskill{\normalsize Languages}{\normalsize Java, C, Python, PHP, MySQL}
 	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS}
-	\cvskill{\normalsize Frameworks/Tools}{\normalsize Bootstrap}
 	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
+	\cvskill{}{}
 	\cvskill{}{}
 	\cvskill{}{}
     % \cvskill{Web Development}{HTML, CSS, JavaScript}
