--- a/resume/education.tex
+++ b/resume/education.tex
@@ -4,7 +4,7 @@
     {\textbf{\normalsize B.S., Electrical and Computer Engineering, Major GPA: \large 3.5}}
     {\large The University of Texas at Austin}
     {\normalsize \textbf{Austin, TX}}
-    {\normalsize \textbf{Fall 2018}}
+    {\normalsize \textbf{May 2018}}
     {
       \begin{cvitems}
         \item {\normalsize \textbf{Coursework:} Algorithms {\LARGE\textbullet }\ Concurrent and Distributed Systems {\LARGE\textbullet }\ Software Design and Implementation (C, C++ and Java Data Structures) {\LARGE\textbullet }\ Software Testing {\LARGE\textbullet }\ Introduction to Computing Systems (Assembly, Computer Architecture) \\{\LARGE\textbullet }\ Introduction to Embedded Systems (ARM Assembly)}
