--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -19,7 +19,7 @@
     {
       \begin{cvitems}
         \item {\normalsize With a partner, developed a chat client in Java with socket programming using observer design pattern}
-        \item {\normalsize User could communicate with other users from different machines, privately message users, send emojis, login with a unique username, logout from the server, and see who is online real-time with the UI written in JavaFX}
+        \item {\normalsize User could communicate with other users from different machines, privately message users, send emojis, login with a unique username, logout from the server, and see who is online real-time}
       \end{cvitems}
     }
   \cventry
@@ -34,14 +34,14 @@
       \end{cvitems}
     }
   \cventry
-    {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE312/tree/master/Project6}}}
-    {\large Language Parser}
+    {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE360T/tree/master/pset6}}}
+    {\large Selenium Test Suite Generator}
     {}
     {}
     {
       \begin{cvitems}
-        \item {\normalsize Created C++ program which parsed input from a text file and handled integer instantiation and computation, output to console, conditionals, and while loops}
-        \item {\normalsize Handled integer computation statements in polish notation with expression trees}
+        \item {\normalsize Wrote a test suite generator to fulfill combinatorial coverage on a field-populated web page}
+        \item {\normalsize Generated test suite can be ran directly, displaying the test inputs real-time using Selenium}
       \end{cvitems}
     }
 \end{cventries}
