--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,6 +1,6 @@
 \cvsection{\huge{Skills}}
 \begin{cvskills}
-	\cvskill{\normalsize Languages}{\normalsize Java, C, Python, PHP, MySQL}
+	\cvskill{\normalsize Languages}{\normalsize Java, Python, C, PHP}
 	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS}
 	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
 	\cvskill{}{}
