--- a/resume/academic.tex
+++ b/resume/academic.tex
@@ -4,11 +4,11 @@
 		{\normalsize \textbf{Teaching Assistant - Web Security}}
 		{\large Codepath.com}
 		{\normalsize \textbf{Austin, TX}}
-		{\normalsize \textbf{Jan 2017 to Present}}
+		{\normalsize \textbf{Jan 2017 to May 2017}}
 		{
 			\begin{cvitems}
 				\item {\normalsize Lead weekly discussion sessions overviewing topics in web security}
-                \item {\normalsize Learn to use PHP, SQL, and a variety of security tools in the Kali linux distribution through Docker containers} 
+                \item {\normalsize Learn to use PHP, MySQL, and a variety of security tools in the Kali linux distribution through Docker containers} 
 			\end{cvitems}
 		}
 \end{cventries}
