--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,13 +1,15 @@
 \cvsection{\huge{Employment}}
   \begin{cventries}
     \cventry
-      {\normalsize \textbf{Software Engineer Intern}}
+      {\normalsize \textbf{Software Engineering Intern}}
       {\large Amazon.com}
       {\normalsize \textbf{Austin, TX}}
       {\normalsize \textbf{May 2017 to Aug 2017}}
       {
         \begin{cvitems}
-          \item {\normalsize TBD - Exports and Expansion Team}
+          \item {\normalsize Developing a service to automate trouble ticket resolving through natural language processing}
+          \item {\normalsize Classification model correctly categorizes tickets with an average \%90 accuracy rate}
+          \item {\normalsize Service capable of ticket anomaly detection and rectifying incorrectly classified tickets}
         \end{cvitems}
       }
     \cventry
