--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -8,8 +8,8 @@
       {
         \begin{cvitems}
           \item {\normalsize Developing a service to automate trouble ticket resolving through natural language processing}
-          \item {\normalsize Classification model correctly categorizes tickets with an average \%90 accuracy rate}
-          \item {\normalsize Service capable of ticket anomaly detection and rectifying incorrectly classified tickets}
+          \item {\normalsize Classification model correctly categorizes trouble tickets with an average 90\% accuracy rate}
+          \item {\normalsize Service resolved the bulk of scoped ticket categories upon deployment}
         \end{cvitems}
       }
     \cventry
