--- a/resume/education.tex
+++ b/resume/education.tex
@@ -7,7 +7,7 @@
     {\normalsize \textbf{May 2018}}
     {
       \begin{cvitems}
-        \item {\normalsize \textbf{Coursework:} Algorithms {\LARGE\textbullet }\ Concurrent and Distributed Systems {\LARGE\textbullet }\ Software Design and Implementation (C, C++ and Java Data Structures) {\LARGE\textbullet }\ Software Testing {\LARGE\textbullet }\ Introduction to Computing Systems (Assembly, Computer Architecture) \\{\LARGE\textbullet }\ Introduction to Embedded Systems (ARM Assembly)}
+      \item {\normalsize \textbf{Relevant Coursework:} Algorithms, Concurrent and Distributed Systems, Software Design and Implementation (C, C++ and Java Data Structures), \ Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), \ Introduction to Embedded Systems (ARM Assembly, C), Data Science Lab (Python, ML / AI topics), Operating Systems, Probability and Random Processes}
       \end{cvitems}
     }
 \end{cventries}
