--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,28 +1,39 @@
 \cvsection{\huge{Employment}}
-  \begin{cventries}
-    \cventry
-      {\normalsize \textbf{Software Engineering Intern}}
-      {\large Amazon.com}
-      {\normalsize \textbf{Austin, TX}}
-      {\normalsize \textbf{May 2017 to Aug 2017}}
-      {
-        \begin{cvitems}
-          \item {\normalsize Developing a service to automate trouble ticket resolving through natural language processing}
-          \item {\normalsize Classification model correctly categorizes trouble tickets with an average 90\% accuracy rate}
-          \item {\normalsize Service resolved the bulk of scoped ticket categories upon deployment}
-        \end{cvitems}
-      }
-    \cventry
-      {\normalsize \textbf{Post Silicon Validation Intern}}
-      {\large Intel Corporation}
-      {\normalsize \textbf{Austin, TX}}
-      {\normalsize \textbf{Oct 2016 to Apr 2017}}
-      {
-        \begin{cvitems}
-          \item {\normalsize Migrated chip validation testing to a C\# platform with greater access to hardware interfacing} 
-          \item {\normalsize Added processor logging features for a validation program made by a graduate intern}
-          \item {\normalsize Created a graphical user interface in Kivy for selection and loading of test programs for chip validation}
-          \item {\normalsize Developed Python scripts to automate manual testing procedures, reducing time costs for validation teams}
-        \end{cvitems}
-      }
-  \end{cventries}
+    \begin{cventries}
+        \cventry
+            {\normalsize \textbf{Software Engineer}}
+            {\large Amazon.com}
+            {\normalsize \textbf{}}
+            {\normalsize \textbf{July 2018 - Present}}
+            {
+                \begin{cvitems}
+                    \item {\normalsize TBD}
+                \end{cvitems}
+            } 
+        \cventry
+            {\normalsize \textbf{Software Engineering Intern}}
+            {\large Amazon.com}
+            {\normalsize \textbf{Austin, TX}}
+            {\normalsize \textbf{May 2017 to Aug 2017}}
+            {
+                \begin{cvitems}
+                    \item {\normalsize Developed a service to automate resolving commonly encountered trouble tickets through natural language processing} 
+                    \item {\normalsize Using multinomial Naive Bayes, text classification model categorizes tickets with an average 90\% accuracy rate despite small training data sets} 
+                    \item {\normalsize Service can detect unrelated tickets and attempt to rectify incorrectly classified tickets, and resolved the bulk of scoped tickets upon deployment}
+                    \item {\normalsize Technologies used: Java, S3, Apache OpenNLP, Mockito, internal Amazon APIs}
+                \end{cvitems}
+            }
+        \cventry
+            {\normalsize \textbf{Post Silicon Validation Intern}}
+            {\large Intel Corporation}
+            {\normalsize \textbf{Austin, TX}}
+            {\normalsize \textbf{Oct 2016 to Apr 2017}}
+            {
+                \begin{cvitems}
+                    \item {\normalsize Migrated chip validation testing to a C\# platform with greater access to hardware interfacing} 
+                    \item {\normalsize Added processor logging features for a validation program made by a graduate intern}
+                    \item {\normalsize Created a graphical user interface in Kivy for selection and loading of test programs for chip validation}
+                    \item {\normalsize Developed Python scripts to automate manual testing procedures, reducing time costs for validation teams}
+                \end{cvitems}
+                }
+    \end{cventries}
