--- a/resume/projects.tex
+++ b/resume/projects.tex
@@ -1,47 +1,25 @@
 \cvsection{\huge{Projects}}
-\begin{cventries}
-  % \cventry
-  %   {\normalsize \textbf{\url{juliandomingo.github.io}}}
-  %   {\large Personal Website}
-  %   {}
-  %   {}
-  %   {
-  %     \begin{cvitems}
-  %       \item {\normalsize Designed a website portfolio to gain experience in web development technologies}
-  %       \item {\normalsize Implemented JavaScript and jQuery to integrate a randomized on click background algorithm to display all backgrounds once before visiting an old background}
-  %     \end{cvitems}
-  %   }
-  \cventry
-    {\normalsize \textbf{\url{https://github.com/JulianDomingo/ChatRoom}}}
-    {\large Chat Client}
-    {}
-    {}
-    {
-      \begin{cvitems}
-        \item {\normalsize With a partner, developed a chat client in Java with socket programming using observer design pattern}
-        \item {\normalsize User could communicate with other users from different machines, privately message users, send emojis, login with a unique username, logout from the server, and see who is online real-time}
-      \end{cvitems}
-    }
-  \cventry
-    {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE319K}}}
-    {\large Embedded Systems Game}
-    {}
-    {}
-    {
-      \begin{cvitems}
-        \item {\normalsize With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
-        \item {\normalsize Implemented finite state machine for the player to change rooms, background music, and used double buffering to improve rendering quality}
-      \end{cvitems}
-    }
-  \cventry
-    {\normalsize \textbf{\url{https://github.com/JulianDomingo/EE360T/tree/master/pset6}}}
-    {\large Selenium Test Suite Generator}
-    {}
-    {}
-    {
-      \begin{cvitems}
-        \item {\normalsize Wrote a test suite generator to fulfill combinatorial coverage on a field-populated web page}
-        \item {\normalsize Generated test suite can be ran directly, displaying the test inputs real-time using Selenium}
-      \end{cvitems}
-    }
-\end{cventries}
+    \begin{cventries}
+        \cventry
+            {\normalsize \textbf{\url{github.com/JulianDomingo/transient}}}
+            {\normalsize \textbf{Transient}}
+            {}
+            {}
+            {
+                \begin{cvitems}
+                    \item {\normalsize Working with a group, created an interactive web application that allows users to communicate in transient, private channels}
+                    \item {\normalsize Written using JavaScript and vanilla HTML / CSS with Firebase backend services}
+                \end{cvitems}
+            }
+        \cventry
+            {\normalsize \textbf{\url{github.com/JulianDomingo/EE319K}}}
+            {\normalsize \textbf{Microcontroller Video Game}}
+            {}
+            {}
+            {
+                \begin{cvitems}
+                    \item {\normalsize With a partner, designed from the ground up a "dungeon crawler" game in C through a microcontroller and won third place in a class of 50+ teams}
+                    \item {\normalsize Allowed for the player to change rooms, added background music, and used double buffering to decrease stutter and tearing in image displaying}
+                \end{cvitems}
+            }
+    \end{cventries}
