--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -1,8 +1,8 @@
 \cvsection{\huge{Skills}}
 \begin{cvskills}
-	\cvskill{\normalsize Languages}{\normalsize Java, Python, C, PHP}
+	\cvskill{\normalsize Languages}{\normalsize Java, Python, C, JavaScript}
 	\cvskill{\normalsize Web Development}{\normalsize HTML, CSS}
-	\cvskill{\normalsize Other}{\normalsize Voltmeter, Oscilloscope, Soldering, Circuit Building and Analysis}
+	\cvskill{\normalsize Other}{\normalsize Git, Voltmeter, Oscilloscope, Soldering, Basic Circuit Building and Analysis}
 	\cvskill{}{}
 	\cvskill{}{}
 	\cvskill{}{}
