--- a/resume/education.tex
+++ b/resume/education.tex
@@ -6,8 +6,11 @@
     {\normalsize \textbf{Austin, TX}}
     {\normalsize \textbf{May 2018}}
     {
-      \begin{cvitems}
-      \item {\normalsize \textbf{Relevant Coursework:} Algorithms, Concurrent and Distributed Systems, Software Design and Implementation (C, C++ and Java Data Structures), \ Software Testing, Introduction to Computing Systems (Assembly, Computer Architecture), \ Introduction to Embedded Systems (ARM Assembly, C), Data Science Lab (Python, ML / AI topics), Operating Systems, Probability and Random Processes}
-      \end{cvitems}
+        \begin{cvitems}
+            \item {\normalsize \textbf{Technical Cores:} Software Engineering and Design, Data Science and Information Processing}
+        \end{cvitems}
+      %\begin{cvitems}
+      %\item {\normalsize \textbf{Relevant Coursework:} \textbf{Algorithms}, \textbf{Concurrent and Distributed Systems}, \textbf{Software Design and Implementation} (C, C++ and Java Data Structures),\ \textbf{Software Testing}, \textbf{Introduction to Computing Systems} (Assembly, Computer Architecture), \ \textbf{Introduction to Embedded Systems} (ARM Assembly, C), \textbf{Data Science Lab} (Python, ML / AI topics), \textbf{Operating Systems}, \textbf{Probability and Random Processes}}
+      %\end{cvitems}
     }
 \end{cventries}
