--- a/resume/education.tex
+++ b/resume/education.tex
@@ -7,7 +7,7 @@
     {\normalsize \textbf{May 2018}}
     {
         \begin{cvitems}
-            \item {\normalsize \textbf{Technical Cores:} Software Engineering and Design, Data Science and Information Processing}
+        \item {\normalsize \textbf{Relevant Coursework}: Algorithms, Concurrent and Distributed Systems, Software Testing, Introduction to Computing Systems, Introduction to Embedded Systems, Data Science Lab, Operating Systems, Probability and Random Processes }
         \end{cvitems}
       %\begin{cvitems}
       %\item {\normalsize \textbf{Relevant Coursework:} \textbf{Algorithms}, \textbf{Concurrent and Distributed Systems}, \textbf{Software Design and Implementation} (C, C++ and Java Data Structures),\ \textbf{Software Testing}, \textbf{Introduction to Computing Systems} (Assembly, Computer Architecture), \ \textbf{Introduction to Embedded Systems} (ARM Assembly, C), \textbf{Data Science Lab} (Python, ML / AI topics), \textbf{Operating Systems}, \textbf{Probability and Random Processes}}
